docker-in/main.tf
resource "aws_security_group" "docker" {
  name        = "docker-sg"
  description = "Allow SSH and app port 8080"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name      = "docker-sg"
    Project   = "roboshop"
    Component = "dev"
  }
}

resource "aws_instance" "docker" {
  instance_type = "t3.micro"
  ami           = "ami-0220d79f3f480ecf5"

  vpc_security_group_ids = [aws_security_group.docker.id]

  user_data = file("docker.sh")

  root_block_device {
    volume_size = 50
    volume_type = "gp3"

    tags = {
      Name = "docker"
    }
  }

  tags = {
    Name      = "docker"
    Project   = "roboshop"
    Component = "dev"
  }
}
